feat: add user implementation
